[package]
name = "RustPG"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30.9", features = ["bytemuck"] }
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"
bytemuck = "1.24.0"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
